--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,8 @@
         <jsoup.version>1.15.3</jsoup.version>
         <poi.version>5.2.3</poi.version>
         <qiniu.version>7.12.1</qiniu.version>
-        <aliyun-core.version>4.3.9</aliyun-core.version>
-        <aliyun-dysmsapi.version>1.1.0</aliyun-dysmsapi.version>
+        <aliyun-core.version>4.6.1</aliyun-core.version>
+        <aliyun-dysmsapi.version>2.2.1</aliyun-dysmsapi.version>
         <mybatis-plus.version>3.5.3.1</mybatis-plus.version>
         <redisson.version>3.19.3</redisson.version>
         <transmittable-thread-local.version>2.14.2</transmittable-thread-local.version>
@@ -129,6 +129,19 @@
                 <artifactId>spring-cloud-commons</artifactId>
                 <version>${spring-cloud-commons.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.jfinal</groupId>
+                <artifactId>jfinal</artifactId>
+                <version>5.0.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>2.0.18</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
