后端接口服务修改

--- a/yami-shop-security/yami-shop-security-common/pom.xml
+++ b/yami-shop-security/yami-shop-security-common/pom.xml
@@ -45,6 +45,10 @@
             <artifactId>fastjson</artifactId>
             <version>${fastjson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.jfinal</groupId>
+            <artifactId>jfinal</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
