处理小程序组建按需引入

--- a/front-end/mall4m/app.json
+++ b/front-end/mall4m/app.json
@@ -96,6 +96,7 @@
             }
         ]
     },
+    "lazyCodeLoading": "requiredComponents",
     "requiredPrivateInfos": ["chooseAddress"],
     "sitemapLocation": "sitemap.json"
 }
