--- a/yami-shop-common/pom.xml
+++ b/yami-shop-common/pom.xml
@@ -69,5 +69,10 @@
             <groupId>com.alibaba</groupId>
             <artifactId>transmittable-thread-local</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.18</version>
+        </dependency>
     </dependencies>
 </project>
