--- a/front-end/mall4m/project.config.json
+++ b/front-end/mall4m/project.config.json
@@ -35,7 +35,8 @@
             "ignore": [],
             "disablePlugins": [],
             "outputPath": ""
-        }
+        },
+        "condition": false
     },
     "compileType": "miniprogram",
     "libVersion": "2.23.2",
