--- a/yami-shop-common/pom.xml
+++ b/yami-shop-common/pom.xml
@@ -74,5 +74,10 @@
             <artifactId>fastjson</artifactId>
             <version>2.0.18</version>
         </dependency>
+        <dependency>
+            <groupId>com.jfinal</groupId>
+            <artifactId>jfinal</artifactId>
+            <version>5.0.8</version>
+        </dependency>
     </dependencies>
 </project>
