--- a/front-end/mall4m/app.json
+++ b/front-end/mall4m/app.json
@@ -8,58 +8,53 @@
         "pages/submit-order/submit-order",
         "pages/express-delivery/express-delivery",
         "pages/pay-result/pay-result",
-        "pages/login/login"
-		
+        "pages/login/login",
+        "pages/user-info/pages/ticketCenter/ticketCenter",
+        "pages/user-info/pages/myTicket/myTicket"
     ],
     "subPackages": [
-      {
-        "root": "pages/balance/",
-        "pages": [
-          "pages/user-balance/user-balance",
-          "pages/user-balance-detail/user-balance-detail"
-        ]
-      },
-      {
-        "root": "pages/address/",
-        "pages": [
-          "pages/delivery-address/delivery-address",
-          "pages/editAddress/editAddress"
-        ]
-      },
-      {
-        "root": "pages/user-info/",
-        "pages": [
-          "pages/binding-phone/binding-phone"
-        ]
-      },
-      {
-        "root": "pages/news/",
-        "pages": [
-          "pages/recent-news/recent-news",
-          "pages/news-detail/news-detail"
-        ]
-      },
-      {
-        "root": "pages/search/",
-        "pages": [
-          "pages/search-page/search-page",
-          "pages/search-prod-show/search-prod-show"
-        ]
-      },
-      {
-        "root": "pages/prods",
-        "pages": [
-          "pages/prod/prod",
-          "pages/prod-classify/prod-classify"
-        ]
-      },
-      {
-        "root": "pages/orders",
-        "pages": [
-          "pages/orderList/orderList",
-          "pages/order-detail/order-detail"
-        ]
-      }
+        {
+            "root": "pages/balance/",
+            "pages": [
+                "pages/user-balance/user-balance",
+                "pages/user-balance-detail/user-balance-detail"
+            ]
+        },
+        {
+            "root": "pages/address/",
+            "pages": [
+                "pages/delivery-address/delivery-address",
+                "pages/editAddress/editAddress"
+            ]
+        },
+        {
+            "root": "pages/news/",
+            "pages": [
+                "pages/recent-news/recent-news",
+                "pages/news-detail/news-detail"
+            ]
+        },
+        {
+            "root": "pages/search/",
+            "pages": [
+                "pages/search-page/search-page",
+                "pages/search-prod-show/search-prod-show"
+            ]
+        },
+        {
+            "root": "pages/prods",
+            "pages": [
+                "pages/prod/prod",
+                "pages/prod-classify/prod-classify"
+            ]
+        },
+        {
+            "root": "pages/orders",
+            "pages": [
+                "pages/orderList/orderList",
+                "pages/order-detail/order-detail"
+            ]
+        }
     ],
     "window": {
         "backgroundTextStyle": "light",
@@ -98,6 +93,8 @@
         ]
     },
     "lazyCodeLoading": "requiredComponents",
-    "requiredPrivateInfos": ["chooseAddress"],
+    "requiredPrivateInfos": [
+        "chooseAddress"
+    ],
     "sitemapLocation": "sitemap.json"
 }
