--- a/yami-shop-security/pom.xml
+++ b/yami-shop-security/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>yami-shop</artifactId>
 		<groupId>com.yami.shop</groupId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>1.24.0115</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
