--- a/yami-shop-security/yami-shop-security-common/pom.xml
+++ b/yami-shop-security/yami-shop-security-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.yami.shop</groupId>
         <artifactId>yami-shop-security</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.24.0115</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
