--- a/front-end/mall4m/project.config.json
+++ b/front-end/mall4m/project.config.json
@@ -40,7 +40,7 @@
     },
     "compileType": "miniprogram",
     "libVersion": "2.23.2",
-    "appid": "wxa6a1e944be3cc470",
+    "appid": "wx3b3088a0c34d2b49",
     "projectname": "mall4m",
     "simulatorType": "wechat",
     "simulatorPluginLibVersion": {},
