--- a/front-end/mall4m/app.json
+++ b/front-end/mall4m/app.json
@@ -77,7 +77,7 @@
         "navigationBarTextStyle": "black"
     },
     "tabBar": {
-        "selectedColor": "#3a86b9",
+        "selectedColor": "#eba851",
         "color": "#b8b8b8",
         "list": [
             {
