--- a/front-end/mall4m/app.json
+++ b/front-end/mall4m/app.json
@@ -67,6 +67,7 @@
             "pages": [
                 "pages/index/index",
                 "pages/order-manage/order-manage",
+                "pages/order-detail/order-detail",
                 "pages/order-delivery/order-delivery"
             ]
         }
