用户余额支付功能

--- a/front-end/mall4m/app.json
+++ b/front-end/mall4m/app.json
@@ -111,5 +111,6 @@
     "requiredPrivateInfos": [
         "chooseAddress"
     ],
+    "lazyCodeLoading": "requiredComponents",
     "sitemapLocation": "sitemap.json"
 }
