根据用户查询订单

--- a/yami-shop-common/src/main/resources/shop.properties
+++ b/yami-shop-common/src/main/resources/shop.properties
@@ -1,14 +1,14 @@
 # \u4E03\u725B\u4E91\u914D\u7F6E
-shop.qiniu.resourcesUrl=https://img.mall4j.com/
-shop.qiniu.accessKey=****
-shop.qiniu.secretKey=****
-shop.qiniu.bucket=****
+shop.qiniu.resourcesUrl=http://cdn.bhgk.cc/
+shop.qiniu.accessKey=vj8A5iP53vxU5Zfah8f0cSDprR8lOe1xzMZYnwZI
+shop.qiniu.secretKey=DvfM7SWBLopPRj8FjAX6FiIEBr1cDc6nljRFrApV
+shop.qiniu.bucket=caipeiyuan
 # \u5177\u4F53\u67E5\u770BQiniuZone.java
 shop.qiniu.zone=HUA_NAN
 
-shop.aLiDaYu.accessKeyId=
-shop.aLiDaYu.accessKeySecret=
-shop.aLiDaYu.signName=
+shop.aLiDaYu.accessKeyId=LTAIS1weeFLhuqDt
+shop.aLiDaYu.accessKeySecret=UoBqqHEirsequcVMsGTXMQk8viPQiB
+shop.aLiDaYu.signName=\u6e24\u6d77\u9ad8\u79d1
 
 shop.tokenAesKey=q5e6w6w9f4q497te
 
@@ -18,3 +18,9 @@ shop.imgUpload.imagePath=D:/Mall4j/IMG/
 shop.imgUpload.uploadType=2
 # \u672C\u5730\u6587\u4EF6\u4E0A\u4F20\u7684\u8DEF\u5F84
 shop.imgUpload.resourceUrl=http://localhost:8085/mall4j/img/
+
+
+shop.ylyPrint.userId=43332771
+shop.ylyPrint.clientId=1095183543
+shop.ylyPrint.clientSecret=4c21f791dc2e660f3ffa891a0da94575
+
