集成积木报表

--- a/yami-shop-admin/pom.xml
+++ b/yami-shop-admin/pom.xml
@@ -31,6 +31,8 @@
             <artifactId>yami-shop-security-admin</artifactId>
             <version>${yami.shop.version}</version>
         </dependency>
+
+        <!-- 定时任务 -->
         <dependency>
             <groupId>com.xuxueli</groupId>
             <artifactId>xxl-job-core</artifactId>
@@ -39,6 +41,20 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-commons</artifactId>
         </dependency>
+
+        <!-- 积木报表 -->
+        <dependency>
+            <groupId>org.jeecgframework.jimureport</groupId>
+            <artifactId>jimureport-spring-boot3-starter-fastjson2</artifactId>
+            <version>1.7.3</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.alibaba</groupId>
+                    <artifactId>fastjson</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
     </dependencies>
 
 
