--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,8 @@
         <xxl-job.version>2.4.0</xxl-job.version>
         <spring-cloud-commons.version>4.1.0</spring-cloud-commons.version>
         <satoken.version>1.37.0</satoken.version>
-        <fastjson.version>1.2.83</fastjson.version>
         <mybatis-spring.version>3.0.3</mybatis-spring.version>
+        <fastjson.version>1.2.83</fastjson.version>
     </properties>
 
     <dependencyManagement>
@@ -139,7 +139,7 @@
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
-                <version>2.0.18</version>
+                <version>${fastjson.version}</version>
             </dependency>
 
         </dependencies>
