--- a/yami-shop-common/pom.xml
+++ b/yami-shop-common/pom.xml
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>2.0.18</version>
+            <version>${fastjson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.jfinal</groupId>
