--- a/front-end/mall4v/package.json
+++ b/front-end/mall4v/package.json
@@ -26,6 +26,7 @@
     "big.js": "6.2.1",
     "browser-image-compression": "2.0.2",
     "crypto-js": "4.1.1",
+    "dayjs": "^1.11.10",
     "echarts": "5.4.1",
     "element-plus": "2.3.6",
     "element-resize-detector": "1.2.4",
